membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Latihan GIT</title>
 </head>
 <body>
+    <header>ini adalah header</header>
     <h1>PT. Maju Sejahtera</h1>
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam expedita, distinctio omnis incidunt, doloribus laudantium sit maiores quod deserunt quis sed aliquid provident voluptatem quisquam deleniti commodi aliquam officiis sequi.</div>
+<footer>ini adalah footer</footer>
 </body>
 </html>
